# lens-accelerate

./: .gitignore  .travis.yml  CHANGELOG.markdown  CHANGELOG.md  README.markdown  README.md  lens-accelerate.cabal  stack-7.10.yaml  stack-7.8.yaml  stack-8.0.yaml  stack-8.10.yaml  stack-8.2.yaml  stack-8.4.yaml  stack-8.6.yaml  stack-8.8.yaml
icebox/: travis.yml
src/Data/Array/Accelerate/Control/: Lens.hs
src/Data/Array/Accelerate/Control/Lens/: Each.hs  Lift.hs  Shape.hs  Tuple.hs
