name:                   lens-accelerate
version:                0.1.0.0
synopsis:               Instances to mix lens with accelerate
description:            Instances to mix lens with accelerate
homepage:               https://github.com/tmcdonell/lens-accelerate
license:                BSD3
license-file:           LICENSE
author:                 Trevor L. McDonell
maintainer:             Trevor L. McDonell <tmcdonell@cse.unsw.edu.au>
copyright:              Trevor L. McDonell
category:               Data, Lenses
build-type:             Simple
cabal-version:          >=1.10

extra-source-files:
    README.markdown
    CHANGELOG.markdown

library
  exposed-modules:
    Data.Array.Accelerate.Control.Lens
    Data.Array.Accelerate.Control.Lens.Tuple

  build-depends:
      base                 >= 4.7       && <4.9
    , accelerate           >= 0.15
    , lens                 >= 4         && < 5

  ghc-options:          -Wall

  hs-source-dirs:       src
  default-language:     Haskell2010


source-repository head
  Type:                 git
  Location:             git://github.com/tmcdonell/lens-accelerate.git

